public/plugins/tree/tree.css
tree {
  display: block;
  width: 100%;
}

tree span {
  outline: none;
  margin: 0;
}
tree span .fa {
  color: #5C6BC0;
  font-size: 14px;
  padding: 0 2px 0 0;
}

tree p {
  outline: none;
  width: 400px;
  word-break: break-all;
  word-wrap: break-word;
  padding: 5px;
  line-height: 18px;
  margin: 0;
}
tree p:hover {
  cursor: pointer;
}

tree md-checkbox {
  margin-right: 8px !important;
}

.angular-ui-tree-handle {
  cursor: default;
  display: inline-block;
  font-weight: normal;
}

tree .treeToggleButton {
  outline: none;
  width: 40px;
  height: 40px;
  text-align: center;
  padding-top: 8px;
}
tree .treeToggleButton md-icon {
  font-size: 22px;
}
tree .treeToggleButton .treeToggleButtonDisabled {
  color: #DDDDDD;
}

/** Tree Node *********************************************************************************************************/

.tree-node-unselected {
  background: #FFFFFF;
}
.tree-node-selected {
  background: #E8EAF6;
}
.tree-node:hover {
  cursor: default;
}
.tree-node span {
  padding-right: 5px;
}

.tree-node button {
  padding: 0;
}
.tree-node .md-button {
  border-radius: 0;
}


/** Tree filter list **************************************************************************************************/

tree .virtualRepeatdemoInfiniteScroll .vertical-container {
  height: 770px;
  min-width: 800px;
  max-width: 800px;
}

tree .virtualRepeatdemoInfiniteScroll .repeated-item {
  cursor: default;
  min-height: 48px;
}

.selectedFilterItem {
  background: #E8EAF6;
}
.unselectedFilterItem {
  background: #FFFFFF;
}

#treeFilterItemName button {
  padding: 0;
  width: 246px;
}
#treeFilterItemName .md-button {
  border-radius: 0;
}

.viewerSelected {
  color: #F00;
}

